--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,30 +1,28 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/main/containers/javascript-node
 {
-	"name": "Ubuntu",
+  "name": "Ubuntu",
 
-	"build": {
-		"dockerfile": "Dockerfile",		
-		"args": { "VARIANT": "12" }
-	},
+  "build": {
+    "dockerfile": "Dockerfile",
+    "args": { "VARIANT": "12" }
+  },
+  "mounts": [
+    "type=bind,source=${env:HOME}${env:USERPROFILE}/.ssh,target=/home/node/.ssh"
+  ],
+  "postCreateCommand": "bash .devcontainer/postCreate.sh",
+  // Make is-docker work again
+  "postStartCommand": "test -f /.dockerenv || sudo touch /.dockerenv",
 
-	"postCreateCommand": "bash .devcontainer/postCreate.sh",
-	// Make is-docker work again
-	"postStartCommand": "test -f /.dockerenv || sudo touch /.dockerenv",
-	
-	// Set *default* container specific settings.json values on container create.
-	"settings": {},
+  // Set *default* container specific settings.json values on container create.
+  "settings": {},
 
+  // Add the IDs of extensions you want installed when the container is created.
+  "extensions": ["nickdodd79.gulptasks", "dbaeumer.vscode-eslint"],
 
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"nickdodd79.gulptasks",
-		"dbaeumer.vscode-eslint"
-	],
+  // 9999 is web server, 9876 is karma
+  "forwardPorts": [9876, 9999],
 
-	// 9999 is web server, 9876 is karma
-	"forwardPorts": [9876, 9999],
-
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+  // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+  "remoteUser": "node"
 }
