--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "serve": "gulp serve",
     "test": "gulp test",
     "lint": "gulp lint",
-    "build": "gulp build --modules=modules.json --version=all",
-    "build:uk": "gulp build --modules=modules-uk.json --version=uk",
-    "build:us": "gulp build --modules=modules-us.json --version=us",
-    "build:aus-nz": "gulp build --modules=modules-aus-nz.json --version=aus-nz",
-    "build:row": "gulp build --modules=modules-row.json --version=row",
-    "build:all": "gulp build --modules=modules-uk.json --version=uk && gulp build --modules=modules-us.json --version=us && gulp build --modules=modules-aus-nz.json --version=aus-nz && gulp build --modules=modules-row.json --version=row"
+    "build": "gulp build --modules=modules.json",
+    "gu-build": "gulp gu-build --modules=modules.json --version=all",
+    "gu-build:uk": "gulp gu-build --modules=modules-uk.json --version=uk",
+    "gu-build:us": "gulp gu-build --modules=modules-us.json --version=us",
+    "gu-build:aus-nz": "gulp gu-build --modules=modules-aus-nz.json --version=aus-nz",
+    "gu-build:row": "gulp gu-build --modules=modules-row.json --version=row",
+    "gu-build:all": "gulp gu-build --modules=modules-uk.json --version=uk && gulp gu-build --modules=modules-us.json --version=us && gulp gu-build --modules=modules-aus-nz.json --version=aus-nz && gulp gu-build --modules=modules-row.json --version=row"
   },
   "repository": {
     "type": "git",
